# pluto

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DART_GUIDELINES.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
embedder/: CMakeLists.txt  CMakePresets.json
embedder/bench/presenter/: ct33_frontend_bench.cc  engine_bench.cc  glass_handoff_bench.cc  mapped_sweep_bench.cc  rm1_damage_amplification_bench.cc  rm1_framebuffer_copy_bench.cc  rm1_handoff_lut_bench.cc  rm2_encoder_bench.cc  xochitl_color_e2e_bench.cc  xochitl_history_state_bench.cc
embedder/bench/renderer/: budgets.yaml  simple_bench.cc
embedder/include/pluto/: abi.h  glass_handoff.h  pen_ring.h  presenter.h
embedder/src/: abi.cc  glass_handoff.cc  main.cc
embedder/src/channels/: channel_registry.cc  channel_registry.h  event_channel.cc  event_channel.h  json_codec.cc  json_codec.h  pen_channels.cc  pen_channels.h  pluto_channels.cc  sensor_channels.cc  sensor_channels.h  service_channels.cc  service_channels.h  standard_codec.cc  standard_codec.h  system_channels.cc  wpa_supplicant_client.cc  wpa_supplicant_client.h
embedder/src/compositor/: backing_store_pool.cc  backing_store_pool.h  frame_recording.h  software_compositor.cc  software_compositor.h
embedder/src/engine/: device_identity.cc  device_identity.h  engine_host.cc  engine_host.h  engine_loader.cc  engine_loader.h  pen_pointer_timestamp.h  qtfb_input_bridge.cc  qtfb_input_bridge.h
embedder/src/ffi/: dart_dl.cc  dart_dl.h
embedder/src/input/: calibrate.cc  calibrate.h  evdev.cc  evdev.h  ink_thread.cc  ink_thread.h  pen.cc  pen.h  pen_ring.cc  pen_ring.h  record.cc  record.h  touch.cc  touch.h  transform.cc  transform.h
embedder/src/presenter/: host_preview.cc  host_preview.h  png_encoder.cc  png_encoder.h  presenter_contract.h  registry.cc
embedder/src/presenter/native/: gallery3_drm_backend.h  native_display_backend.h  native_presenter.cc  native_presenter.h  scanout_transport.h  waveform_program.h
embedder/src/presenter/qtfb/: qtfb_client.cc  qtfb_client.h  qtfb_presenter.cc  qtfb_presenter.h  qtfb_proto.h
embedder/src/presenter/swtcon/: admission_mailbox.cc  admission_mailbox.h  ct33_frontend.cc  ct33_frontend.h  ct33_threshold_field.inc  dc_ledger.cc  dc_ledger.h  drive_pixel_op.h  drm_swtcon_device.cc  drm_swtcon_device.h  drm_swtcon_presenter.cc  drm_swtcon_presenter.h  fast_rail_admit_kernels.h  fast_rail_admit_kernels_neon.cc  fast_rail_admit_kernels_scalar.cc  hygiene_fsm.cc  hygiene_fsm.h  lut_cache.cc  lut_cache.h  mapped_sweep.cc  mapped_sweep.h  phase_emit.cc  phase_emit.h  pixel_engine.cc  pixel_engine.h  scan_loop.cc  scan_loop.h  sweep_kernels.h  sweep_kernels_neon.cc  sweep_kernels_scalar.cc  swtcon_constants.h  swtcon_packer.cc  (+18 more)
embedder/src/renderer/: abi_bridge.cc  abi_bridge.h  auto_ghostbuster.cc  auto_ghostbuster.h  bluenoise_64.h  classify_ladder.cc  classify_ladder.h  convert.cc  convert.h  frame_ledger.cc  frame_ledger.h  gallery3.cc  gallery3.h  guard_band.cc  guard_band.h  kernels.h  kernels_neon.cc  kernels_scalar.cc  ledgers.cc  ledgers.h  pen_render_policy.cc  pen_render_policy.h  perception.cc  perception.h  quantize.cc  quantize.h  rect_utils.h  refresh_class.h  region_scheduler.cc  region_scheduler.h  renderer_config.h  renderer_handoff.cc  renderer_handoff.h  scroll_detect.cc  scroll_detect.h  settle_policy.cc  settle_policy.h  tile_pass.cc  tile_pass.h
embedder/src/runtime/: direct_control_server.cc  direct_control_server.h  event_loop.cc  event_loop.h  health_file.cc  health_file.h  lifecycle.cc  lifecycle.h  sha256.cc  sha256.h  vsync_pacer.cc  vsync_pacer.h
embedder/src/sensors/: iio.cc  iio.h
embedder/test/: CMakeLists.txt  abi_test.cc
embedder/test/channels/: channel_registry_test.cc  device_channels_test.cc  event_channel_test.cc  pen_channels_test.cc  sensor_channels_test.cc  service_channels_test.cc  standard_codec_test.cc
embedder/test/compositor/: backing_store_pool_test.cc  frame_renderer_test.cc  presenter_ops_test_support.h  software_compositor_test.cc
embedder/test/engine/: device_identity_test.cc  engine_host_test.cc  engine_loader_test.cc  lifecycle_test.cc  qtfb_input_bridge_test.cc
embedder/test/input/: calibration_test.cc  evdev_replay_test.cc  ink_thread_test.cc  pen_ring_test.cc  pen_test.cc  touch_test.cc  transform_test.cc
embedder/test/presenter/: admission_mailbox_test.cc  content_consistency_test.cc  convert_levels_test.cc  ct33_frontend_test.cc  drm_swtcon_presenter_test.cc  engine_equivalence_test.cc  fast_rail_admit_kernels_test.cc  glass_handoff_test.cc  hygiene_fsm_test.cc  l0_trace_test.cc  lcdif_tcon_backend_test.cc  mapped_sweep_test.cc  mxcfb_backend_test.cc  mxcfb_device_test.cc  mxs_lcdif_device_test.cc  native_presenter_test.cc  phase_emit_test.cc  pixel_engine_test.cc  png_encoder_test.cc  qtfb_presenter_test.cc  rm2_cpu_frequency_lease_test.cc  rm2_scan_encoder_test.cc  rm2_waveform_program_test.cc  scan_loop_test.cc  sweep_kernels_test.cc  swtcon_dc_ledger_test.cc  swtcon_drm_device_test.cc  swtcon_eink_synth.h  swtcon_lut_cache_test.cc  swtcon_packer_test.cc  swtcon_rails_test.cc  swtcon_temperature_test.cc  swtcon_waveform_test.cc  wbf_decoder_test.cc  wbf_synth.h  xochitl_color_mapper_reference.cc  xochitl_color_mapper_reference.h  xochitl_color_mapper_reference_test.cc  xochitl_color_pipeline_test.cc  xochitl_delta_table_test.cc  (+8 more)
embedder/test/renderer/: abi_bridge_convert_test.cc  abi_bridge_test.cc  auto_ghostbuster_test.cc  classify_ladder_test.cc  frame_ledger_test.cc  gtest_main.cc  guard_band_test.cc  kernels_test.cc  ledgers_test.cc  pen_render_policy_test.cc  region_scheduler_test.cc  renderer_config_test.cc  renderer_handoff_test.cc  renderer_test.cc  scroll_detect_test.cc  settle_policy_test.cc  tile_pass_test.cc
embedder/test/runtime/: direct_control_server_test.cc  event_loop_test.cc  health_file_test.cc  sha256_test.cc  vsync_pacer_test.cc
embedder/test/sensors/: iio_test.cc
embedder/toolchain/: Dockerfile.aarch64  aarch64-linux-gnu.cmake  arm-linux-gnueabi.cmake
embedder/tools/: renderer_replay.cc  wbf_inspect.cc
(+450 files in other folders)
